<resources>
    <string name="app_name">DZ14Fragments1</string>
    <string name="infoStr">Информация о приложении</string>
    <string name="exit">Выход из приложения</string>
    <string name="count">№</string>
    <string name="text_note">Текст заметки</string>
    <string name="data_add">Дата добавления</string>
    <string name="add">Добавить</string>
    <string name="count_note">Номер заметки</string>
    <string name="date_create">Дата создания</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>